style.css
body{
    background-color: black;
}

:root{
    --color: white;
}
/* navbar */
.menu{
    display: grid;
    grid-template-columns: 1fr 1fr  1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    justify-content: center;
    align-items: center;
    grid-template-areas: 
    " . navbar-left . . navbar-right ."
     
    ;
}
/* menu left */
.navbar-left{
    grid-area: navbar-left;
}

.navbar-left ul {
    display: flex;
    flex-direction: row;
}

.navbar-left ul li{
    display: flex;
    margin: 10px;
    color: var(--color);
    font-size: 25px;
}

/* menu right */

.navbar-right{
    grid-area: navbar-right;
}

.navbar-right ul {
    display: flex;
    flex-direction: row;
}

.navbar-right ul li{
    display: flex;
    margin: 10px;
    color: var(--color);
    font-size: 25px;
}
/* main photo */
.photo{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    margin-top: 81px;
    margin-bottom: 220px;
    grid-template-areas: 
    " myface myface myface . "
    " myface myface myface . "
    
    ;
}


.myface{
    grid-area: myface;
    width: 75%;
    
}


 .introduction{
    display: flex;
    flex-direction: column;
    /* border: 1px solid red; */
    justify-content: center;
    align-items: center;
    width: 60%;
    height: 40%;
    position: absolute;
    left: 740px;
    top: 500px;
    
 }

 .introduction h1{
   font-size: 45px;
   color: var(--color);
 }


.text{
    margin-top: 80px;
    color: var(--color);
    margin-left: 80px;
}

 /* Portfolio */


.Portfolio{
    display: grid;
 margin-top: 40px;
 margin-left: 80px;
 margin-right: 80px;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 10px;
   grid-template-areas: 
" gold1 gold1 three three "
" gold1 gold1    four    five  "
" two     two    four    five  " 
 ;
}

.gold1{
    height: 300px;
    grid-area: gold1;
    background-image: url(/img/shopping-5217035__340.png);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.two{
    grid-area: two;
    background-image: url(/img/seo-2394237__340.webp) ;
    background-repeat: no-repeat;
    background-size: cover;
   }
 
.three{
    grid-area: three;
    background-image: url(/img/blog-793047__340.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    /* font-size: 40px; */
    border: 1px solid red;
    

}

.four{
    grid-area: four;
    background-image: url(/img/carousel-1684591__340.png);
    background-repeat: no-repeat;
    background-size: cover;
    }

.five{
        grid-area: five;
        background-image: url(/img/facebook-424521__340.jpg);
        background-repeat: no-repeat;
        background-size: cover;
        }

        .Portfolio div{

            font-size: 30px;
            background-color: blue;
            border: 1px solid red;   
        }

.Portfolio p{

    background-color: white;
    width: 250px;
}

/* about me */

.About-Me{
    margin-top: 80px;
display: grid;
grid-template-columns: 1fr 1fr 1fr 1fr;
grid-template-areas: 1fr 1fr 1fr 1fr;
grid-template-areas: 
". . . ."
". . . ."


;

}

.About-Me{
    margin-top: 80px;
    color: var(--color);


}

